--- a/public/css/docs.css
+++ b/public/css/docs.css
@@ -5,9 +5,19 @@ $nav-link-padding-y: 1rem;
 
 $navbar-nav-link-padding-x: 1.25rem;
 $navbar-nav-link-padding-x: 1.25rem;*/
+
 body {
   font-size: 1rem;
   position: relative;
+  outline: none !important;
+  box-shadow: none !important;
+  border: none;
+}
+
+button:focus{
+  outline: none !important;
+  box-shadow: none !important;
+  border: none;
 }
 
 .bd-navbar {
