--- a/src/views/agent/layouts/listings/blocks/map/css/map-address.css
+++ b/src/views/agent/layouts/listings/blocks/map/css/map-address.css
@@ -1,3 +1,6 @@
-.rbt-input-main{
-    height: 40px !important;
+.rbt .rbt-input-main{
+    height: 100% !important;
+    border: none !important;
+    position: relative !important;
+    margin-bottom: 0px !important;
 }
