--- a/src/views/tenants/listings/css/listing.css
+++ b/src/views/tenants/listings/css/listing.css
@@ -16,3 +16,11 @@
 .listing-grid, .listing-list{
     transition: all 0.5s ease-in-out !important;
 }
+
+.tab-content{
+    background-color: white !important;
+}
+
+.box{
+    minHeight: 100% !important;
+}
