--- a/src/views/agent/support/components/chat/chat.css
+++ b/src/views/agent/support/components/chat/chat.css
@@ -1,10 +1,10 @@
 .chat-body{
-    height: 70vh;
+    /* height: 70vh; */
     overflow-y: scroll;
 }
 
 .chat-body::-webkit-scrollbar{
-    width: 8px;
+    width: 7px;
 }
 
 .chat-body::-webkit-scrollbar-button{
@@ -13,11 +13,19 @@
 
 .chat-body::-webkit-scrollbar-track{
     background-color: rgb(211, 211, 211);
-    border-radius: 10px;
 }
 
 .chat-body::-webkit-scrollbar-thumb{
     height: 40%;
     background-color: gray;
     border-radius: 10px;
+}
+
+
+.chat-item-box-right{
+    border-radius: 20px 20px 0 20px;
+}
+
+.chat-item-box-left{
+    border-radius: 20px 20px 20px 0;
 }
