--- a/src/components/preloader/preloader.css
+++ b/src/components/preloader/preloader.css
@@ -24,7 +24,7 @@
 	width: 1rem;
 	height: 1rem;
 	border-radius: 100%;
-	background-color: #0ec6d5;
+	background-color: #49a1ff;
 	-webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
 	animation: sk-bouncedelay 1.4s infinite ease-in-out both;
 }
