Overhaul Auth System

--- a/public/css/custom-app.css
+++ b/public/css/custom-app.css
@@ -2,9 +2,12 @@
     padding-left: 80px !important;
 
 }
+
 body{
     font-family: 'Montserrat', sans-serif;
+    /* font-family: "Poppins", sans-serif; */
 }
+
 .dropright .dropdown-toggle::after, .dropdown-toggle::after {
     font-weight: bold;
 }
