--- a/public/css/custom-app.css
+++ b/public/css/custom-app.css
@@ -4,8 +4,8 @@
 }
 
 body{
-    font-family: 'Montserrat', sans-serif;
-    /* font-family: "Poppins", sans-serif; */
+    /* font-family: 'Montserrat', sans-serif; */
+    font-family: "Poppins", sans-serif;
 }
 
 .dropright .dropdown-toggle::after, .dropdown-toggle::after {
