--- a/public/css/custom-app.css
+++ b/public/css/custom-app.css
@@ -11,3 +11,13 @@ body{
 .dropright .dropdown-toggle::after, .dropdown-toggle::after {
     font-weight: bold;
 }
+.filepond--root{
+    /* font-family: 'Montserrat', sans-serif; */
+    font-family: "Poppins", sans-serif;
+}
+.form-control:focus {
+    border-color: #49a1ff !important;
+}
+.cursor-pointer{
+    cursor: pointer;
+}
