--- a/public/css/custom-app.css
+++ b/public/css/custom-app.css
@@ -21,3 +21,23 @@ body{
 .cursor-pointer{
     cursor: pointer;
 }
+.text-secondary {
+    color: #49a1ff!important;
+}
+a.text-secondary:hover, a.text-secondary:focus {
+    color: #49a1ff!important;
+}
+
+.c-title{
+    font-size: 3rem !important;
+    line-height: 1.15 !important;
+    font-weight: 900;
+    color: #49a1ff !important;
+    text-transform: capitalize;
+}
+body{
+    font-size:1rem !important
+}
+footer{
+    font-size: 14px !important;
+}
