--- a/public/css/custom-app.css
+++ b/public/css/custom-app.css
@@ -29,14 +29,14 @@ a.text-secondary:hover, a.text-secondary:focus {
 }
 
 .c-title{
-    font-size: 3rem;
+    font-size: 2.1rem !important;
     line-height: 1.15 !important;
     font-weight: 900;
     color: #49a1ff !important;
     text-transform: capitalize;
 }
 body{
-    font-size:1rem !important
+    font-size:0.9rem !important
 }
 footer{
     font-size: 14px !important;
