--- a/public/css/custom-app.css
+++ b/public/css/custom-app.css
@@ -1,52 +1,113 @@
-.pd-logo{
-    padding-left: 80px !important;
-
+.pd-logo {
+  padding-left: 80px !important;
 }
 
-body{
-    font-family: "Poppins", sans-serif;
-    /* font-family: 'Montserrat', sans-serif; */
-    /* font-family: 'Rubik', sans-serif; */
-    /* font-family: 'Ubuntu', sans-serif; */
+body {
+  font-family: "Poppins", sans-serif;
+  /* font-family: 'Montserrat', sans-serif; */
+  /* font-family: 'Rubik', sans-serif; */
+  /* font-family: 'Ubuntu', sans-serif; */
 }
 
-.dropright .dropdown-toggle::after, .dropdown-toggle::after {
-    font-weight: bold;
+.navbar-dark .dropright .dropdown-toggle::after,
+.dropdown-toggle::after {
+  font-weight: bold;
+  color: white;
 }
-.filepond--root{
-    /* font-family: 'Montserrat', sans-serif; */
-    font-family: "Poppins", sans-serif;
+.navbar-white .dropright .dropdown-toggle::after,
+.dropdown-toggle::after {
+  font-weight: bold;
+  color: #333;
+}
+.filepond--root {
+  /* font-family: 'Montserrat', sans-serif; */
+  font-family: "Poppins", sans-serif;
 }
 .form-control:focus {
-    border-color: #49a1ff !important;
+  border-color: #49a1ff !important;
 }
-.cursor-pointer{
-    cursor: pointer;
+.cursor-pointer {
+  cursor: pointer;
 }
 .text-secondary {
-    color: #49a1ff!important;
+  color: #49a1ff !important;
 }
-a.text-secondary:hover, a.text-secondary:focus {
-    color: #49a1ff!important;
-}
-
-.c-title{
-    font-size: 2.1rem !important;
-    line-height: 1.15 !important;
-    font-weight: 900;
-    color: #49a1ff !important;
-    text-transform: capitalize;
-}
-body{
-    font-size:0.9rem !important
-}
-footer{
-    font-size: 14px !important;
+a.text-secondary:hover,
+a.text-secondary:focus {
+  color: #49a1ff !important;
 }
 
-.bg-secondary{
-    background-color: #252525 !important;
+.c-title {
+  font-size: 2.1rem !important;
+  line-height: 1.15 !important;
+  font-weight: 900;
+  color: #49a1ff !important;
+  text-transform: capitalize;
+}
+body {
+  font-size: 0.9rem !important;
+}
+footer {
+  font-size: 14px !important;
+}
+
+.bg-secondary {
+  background-color: #252525 !important;
 }
 .main-header.navbar-dark .btn {
-    border-color: transparent;
+  border-color: transparent;
+}
+
+.navbar-light .d-user {
+  color: #333 !important;
+}
+.navbar-dark .d-user {
+  color: #ffff !important;
+}
+
+/* d-user
+  
+  .navbar-light .navbar-nav .nav-link
+  
+  .navbar-dark .navbar-nav .nav-link */
+
+.w-35px {
+  width: 46px;
+}
+.h-35 {
+  height: 46px;
+}
+
+@media screen and (max-width: 1199.98px) {
+  .main-header.header-mobile-xl .normal-logo {
+    /* height: 30px;
+        width: 90.75px; */
+    width: 80px;
+  }
+
+  .pd-logo {
+    padding-left: 30px !important;
+  }
+
+  .navbar-white .dropright .dropdown-toggle::after,
+  .dropdown-toggle::after {
+    font-weight: bold;
+    color: #333;
+  }
+  .navbar-dark .dropright .dropdown-toggle::after,
+  .dropdown-toggle::after {
+    font-weight: bold;
+    color: white;
+  }
+
+  .w-35px {
+    width: 35px;
+  }
+  .h-35 {
+    height: 35px;
+  }
+
+  .main-header .navbar {
+    padding: 0px 0px;
+  }
 }
